# bambu-mcp-server

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOY_NOW.md  Dockerfile  PROJECT_OVERVIEW.md  QUICK_START.md  RAILWAY_TROUBLESHOOTING.md  README.md  SETUP_2FA.md  STATUS.md  pyproject.toml  railway.json  railway.toml  requirements.txt  start.sh
src/bambu_mcp/: __init__.py  auth.py  bambu_tools.py  config.py  server.py  setup.py
